--- a/index.html
+++ b/index.html
@@ -2,22 +2,84 @@
 <html>
   <head>
     <style>
-      #board {
-        position:absolute;
-        width:100%;
-        height:100%;
+      body {
+        margin: 0;
+        overflow: hidden;
       }
     </style>
   </head>
     <body>
-      d
-      <canvas id='board'><canvas/>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
     <script>
       var socket = io();
-      socket.on('joined', function(msg) {
-        console.log(msg);
-      });
+      var pb;
+
+      function playerBrush(x,y,color) {
+        this.x = x;
+        this.y = y;
+        this.xspeed = 0;
+        this.yspeed = 0;
+        this.update = function () {
+          this.x = this.x + this.xspeed;
+          this.y = this.y + this.yspeed;
+          this.x = constrain(this.x, 0, windowWidth-10);
+          this.y = constrain(this.y, 0, windowHeight-10);
+        }
+        this.show = function () {
+          noStroke();
+          fill(color);
+          rect(this.x, this.y, 10, 10);
+        }
+        this.dir = function(x,y) {
+          this.xspeed = x;
+          this.yspeed = y;
+        }
+        this.stop = function() {
+          this.xspeed = 0;
+          this.yspeed = 0;
+        }
+      }
+
+      function keyPressed () {
+        if (keyCode == UP_ARROW) {
+          pb.dir(0,-3);
+        } else if (keyCode == DOWN_ARROW) {
+          pb.dir(0,3);
+        } else if (keyCode == RIGHT_ARROW) {
+          pb.dir(3,0);
+        } else if (keyCode == LEFT_ARROW) {
+          pb.dir(-3,0);
+        } else if (keyCode == SHIFT) {
+          pb.dir(0,0);
+        }
+      }
+
+      function setup() {
+        createCanvas(windowWidth, windowHeight);
+        background(51);
+        pb = new playerBrush(0,0,255);
+        socket.on('updateall', updatedraw);
+      }
+
+      function updatedraw(data) {
+        var newpb = new playerBrush(data.x,data.y, 100);
+        newpb.update();
+        newpb.show();
+      }
+
+      function draw() {
+        let data = {
+          x: pb.x,
+          y: pb.y
+        };
+        socket.emit('drawn', data);
+        pb.update();
+        pb.show();
+      }
+
+
+
     </script>
   </body>
 </html>
